--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,14 @@ Thumbs.db
 # Editor directories
 .vscode/
 .idea/
+
+# Environment variables
+.env
+.env.local
+.env.development
+.env.production
+
+# Vite cache
+.node_modules
+/dist
+/.vite
